# abstractgraph

./: .gitignore  ECOSYSTEM.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: HASHING.md  MIGRATION_TERMINOLOGY.md  OPERATORS.md  ORGANIZATION.md  PREPROCESSOR.md  README.md  RELEASE_TERMINOLOGY_MIGRATION.md  TERMINOLOGY_AUDIT.md  VECTORIZATION.md  WHITE_PAPER.md
notebooks/: README.md  _bootstrap.py
notebooks/examples/: example_abstract_graph_operators_02_composition_and_add.ipynb  example_abstract_graph_operators_03_filters_and_selection.ipynb  example_abstract_graph_operators_03_merge_and_complements.ipynb  example_abstract_graph_operators_04_binary_and_combination_operators.ipynb  example_abstract_graph_operators_05_control_flow_and_conditionals.ipynb  example_abstract_graph_operators_05_xml_and_operator_serialization.ipynb  example_abstract_graph_operators_06_control_flow_and_conditionals.ipynb  example_abstract_graph_operators_06_vectorization_and_features.ipynb  example_abstract_graph_operators_06_xml_and_operator_serialization.ipynb  example_abstract_graph_operators_07_preprocessor_attention_pipeline.ipynb  example_abstract_graph_operators_07_vectorization_and_features.ipynb  example_abstract_graph_operators_07_xml_and_operator_serialization.ipynb  example_abstract_graph_operators_08_feature_inspection_and_subgraphs.ipynb  example_abstract_graph_operators_08_preprocessor_attention_pipeline.ipynb  example_abstract_graph_operators_08_vectorization_and_features.ipynb  example_abstract_graph_operators_09_preprocessor_attention_pipeline.ipynb  (+7 more)
scripts/: clean_notebook_outputs.py  smoke_test.py
tests/: test_canonical_terminology.py  test_preprocessor_integration.py  test_terminology_migration.py
(+23 files in other folders)
