[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractgraph"
version = "0.1.0"
description = "Core AbstractGraph definitions, hashing, operators, XML, vectorization, and display."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
